@startuml

title __ACTORRACE-TEAM-JAVA-10's Class Diagram__\n

    namespace ch.bfh.akka.actorrace.frontend {
      abstract class ch.bfh.akka.actorrace.backend.Attore {
      }
    }
  
  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.backend.AttoreRand {
      }
    }

  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.backend.AttoreSchneggo {
      }
    }
  
  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.backend.GrossoCervello {
      }
    }



    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.backend.LabirintoEstremo {
      }
    }

  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.CentroDiControllo {
      }
    }
 
  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.Controllore {
      }
    }
 
  

    namespace ch.bfh.akka.actorrace.frontend {
      class ch.bfh.akka.actorrace.frontend.Principale {
      }
    }
  

  ch.bfh.akka.actorrace.backend.Attore -up-|> akka.actor.typed.javadsl.AbstractBehavior
  ch.bfh.akka.actorrace.backend.AttoreRand -up-|> ch.bfh.akka.actorrace.backend.Attore
  ch.bfh.akka.actorrace.backend.AttoreRand o-- ch.bfh.akka.actorrace.backend.LabirintoEstremo : lab
  ch.bfh.akka.actorrace.backend.AttoreSchneggo -up-|> ch.bfh.akka.actorrace.backend.Attore
  ch.bfh.akka.actorrace.backend.AttoreSchneggo o-- ch.bfh.akka.actorrace.backend.LabirintoEstremo : lab
  ch.bfh.akka.actorrace.backend.AttoreSchneggo o-- ch.bfh.akka.actorrace.backend.LabirintoEstremo : localLabirinto
  ch.bfh.akka.actorrace.backend.GrossoCervello -up-|> akka.actor.typed.javadsl.AbstractBehavior
  ch.bfh.akka.actorrace.frontend.Controllore o-- ch.bfh.akka.actorrace.backend.LabirintoEstremo : lab
  ch.bfh.akka.actorrace.frontend.Principale -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
